--- a/server/infra/logstash/pipeline/logstash.conf
+++ b/server/infra/logstash/pipeline/logstash.conf
@@ -87,14 +87,10 @@ filter {
 output {
   # Output to Elasticsearch
   elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
-    user => "elastic"
-    password => "admin123"
+    hosts => ["${ELASTICSEARCH_HOSTS:http://elasticsearch:9200}"]
+    user => "${ELASTICSEARCH_USERNAME:elastic}"
+    password => "${ELASTICSEARCH_PASSWORD}"
     index => "travelnest-logs-%{+YYYY.MM.dd}"
-    
-    # Index template
-    template_name => "travelnest-logs"
-    template_pattern => "travelnest-logs-*"
   }
 
   # Debug output (comment out in production)
