--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
   "author": "Le Duc Phuong",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^9.2.1",
     "@infobip-api/sdk": "^0.3.2",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
