--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "seed:hotel_amenity": "cross-env NODE_ENV=development node database/seeders/hotel_amenity.seed.js",
     "seed:room_inventory": "cross-env NODE_ENV=development node database/seeders/room_inventory.seed.js",
     "seed:room_amenity": "cross-env NODE_ENV=development node database/seeders/room_amenity.seed.js",
+    "seed:permission": "cross-env NODE_ENV=development node database/seeders/permission.seed.js",
     "seed:review": "cross-env NODE_ENV=development node database/seeders/review.seed.js",
     "seed:room": "cross-env NODE_ENV=development node database/seeders/room.seed.js",
     "seed:booking": "cross-env NODE_ENV=development node database/seeders/booking.seed.js",
@@ -59,6 +60,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^9.2.1",
     "@infobip-api/sdk": "^0.3.2",
+    "amqplib": "^0.10.4",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -70,8 +72,7 @@
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "joi": "^18.0.2",
-    "amqplib": "^0.10.4",
-    "minio": "^8.0.6",
+    "minio": "^8.0.1",
     "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.14.0",
@@ -86,6 +87,8 @@
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "stripe": "^17.3.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0",
     "uuidv7": "^1.1.0"
   },
