--- a/server/package.json
+++ b/server/package.json
@@ -10,18 +10,19 @@
     "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
     "seed": "node database/seeders/seeder.js",
-    "seed:user": "cross-env NODE_ENV=development node database/seeders/user.seed.js",
-    "seed:amenity": "cross-env NODE_ENV=development node database/seeders/amenity.seed.js",
-    "seed:hotel": "cross-env NODE_ENV=development node database/seeders/hotel.seed.js",
-    "seed:hotel_amenity": "cross-env NODE_ENV=development node database/seeders/hotel_amenity.seed.js",
-    "seed:room_inventory": "cross-env NODE_ENV=development node database/seeders/room_inventory.seed.js",
-    "seed:room_amenity": "cross-env NODE_ENV=development node database/seeders/room_amenity.seed.js",
-    "seed:permission": "cross-env NODE_ENV=development node database/seeders/permission.seed.js",
-    "seed:review": "cross-env NODE_ENV=development node database/seeders/review.seed.js",
-    "seed:room": "cross-env NODE_ENV=development node database/seeders/room.seed.js",
-    "seed:booking": "cross-env NODE_ENV=development node database/seeders/booking.seed.js",
-    "seed:nearby_place": "cross-env NODE_ENV=development node database/seeders/nearby_place.seed.js",
-    "seed:notification": "cross-env NODE_ENV=development node database/seeders/notification.seed.js",
+    "seed:user": "cross-env NODE_ENV=development node infra/database/seeders/user.seed.js",
+    "seed:amenity": "cross-env NODE_ENV=development node infra/database/seeders/amenity.seed.js",
+    "seed:hotel": "cross-env NODE_ENV=development node infra/database/seeders/hotel.seed.js",
+    "seed:hotel_amenity": "cross-env NODE_ENV=development node infra/database/seeders/hotel_amenity.seed.js",
+    "seed:room_inventory": "cross-env NODE_ENV=development node infra/database/seeders/room_inventory.seed.js",
+    "seed:room_amenity": "cross-env NODE_ENV=development node infra/database/seeders/room_amenity.seed.js",
+    "seed:permission": "cross-env NODE_ENV=development node infra/database/seeders/permission.seed.js",
+    "seed:hotel_search_snapshot": "cross-env NODE_ENV=development node infra/database/seeders/hotel_search_snapshot.seed.js --rebuild",
+    "seed:review": "cross-env NODE_ENV=development node infra/database/seeders/review.seed.js",
+    "seed:room": "cross-env NODE_ENV=development node infra/database/seeders/room.seed.js",
+    "seed:booking": "cross-env NODE_ENV=development node infra/database/seeders/booking.seed.js",
+    "seed:nearby_place": "cross-env NODE_ENV=development node infra/database/seeders/nearby_place.seed.js",
+    "seed:notification": "cross-env NODE_ENV=development node infra/database/seeders/notification.seed.js",
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize-cli db:migrate:undo",
     "migrate:undo:all": "sequelize-cli db:migrate:undo:all",
@@ -31,9 +32,13 @@
     "migrate:seed:undo": "sequelize-cli db:seed:undo:all",
     "start:consumer": "cross-env NODE_ENV=development node rabbitmq/worker.js",
     "es:setup-hotels": "cross-env NODE_ENV=development node infra/elasticsearch/setup-hotels-index.js",
+    "es:setup-hotels:force": "cross-env NODE_ENV=development node infra/elasticsearch/setup-hotels-index.js --force",
     "es:setup-logs": "cross-env NODE_ENV=development node infra/elasticsearch/setup-logs-index.js",
     "es:setup-logs:force": "cross-env NODE_ENV=development node infra/elasticsearch/setup-logs-index.js --force",
-    "es:setup-logs:create": "cross-env NODE_ENV=development node infra/elasticsearch/setup-logs-index.js --force --create-index"
+    "es:setup-logs:create": "cross-env NODE_ENV=development node infra/elasticsearch/setup-logs-index.js --force --create-index",
+    "es:seed-hotels": "cross-env NODE_ENV=development node infra/elasticsearch/seeders/hotels_index.seed.js",
+    "es:seed-hotels:clear": "cross-env NODE_ENV=development node infra/elasticsearch/seeders/hotels_index.seed.js --clear",
+    "es:seed-hotels:active": "cross-env NODE_ENV=development node infra/elasticsearch/seeders/hotels_index.seed.js --status=active"
   },
   "_moduleAliases": {
     "@controllers": "controllers",
@@ -58,7 +63,7 @@
   "author": "Le Duc Phuong",
   "license": "ISC",
   "dependencies": {
-    "@elastic/elasticsearch": "^9.2.1",
+    "@elastic/elasticsearch": "^8.11.0",
     "@infobip-api/sdk": "^0.3.2",
     "amqplib": "^0.10.4",
     "axios": "^1.7.7",
