--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,17 @@
   "version": "1.0.0",
   "description": "Booking hotel platform",
   "main": "index.js",
+  "nodemonConfig": {
+    "ignore": [
+      "api/elasticsearch/*",
+      "infra/database/migrations/*",
+      "infra/database/seeders/*",
+      "infra/elasticsearch/data/*",
+      "infra/elasticsearch/seeders/*",
+      "infra/minio-data/*",
+      "docs/*"
+    ]
+  },
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
