replace rabbitmq by bullmq for background jobs processing

--- a/server/jsconfig.json
+++ b/server/jsconfig.json
@@ -13,14 +13,15 @@
       "@public/*": ["public/*"],
       "@repositories/*": ["repositories/*"],
       "@services/*": ["services/*"],
-      "@rabbitmq/*": ["rabbitmq/*"],
       "@socket/*": ["socket/*"],
       "@utils/*": ["utils/*"],
       "@interfaces/*": ["interfaces/*"],
       "@adapters/*": ["adapters/*"],
       "@constants/*": ["constants/*"],
       "@helpers/*": ["helpers/*"],
-      "@infra/*": ["infra/*"]
+      "@infra/*": ["infra/*"],
+      "@queues/*": ["queues/*"],
+      "@workers/*": ["workers/*"],
     },
     "module": "commonjs",
     "target": "ES2020",
