--- a/server/package.json
+++ b/server/package.json
@@ -41,7 +41,8 @@
     "migrate:create": "sequelize-cli migration:generate --name",
     "migrate:seed": "sequelize-cli db:seed:all",
     "migrate:seed:undo": "sequelize-cli db:seed:undo:all",
-    "start:consumer": "cross-env NODE_ENV=development node rabbitmq/worker.js",
+    "start:bullmq-worker": "cross-env NODE_ENV=production node workers/index.js",
+    "dev:bullmq-worker": "cross-env NODE_ENV=development nodemon workers/index.js",
     "es:setup-hotels": "cross-env NODE_ENV=development node infra/elasticsearch/setup-hotels-index.js",
     "es:setup-hotels:force": "cross-env NODE_ENV=development node infra/elasticsearch/setup-hotels-index.js --force",
     "es:setup-logs": "cross-env NODE_ENV=development node infra/elasticsearch/setup-logs-index.js",
@@ -63,7 +64,8 @@
     "@public": "public",
     "@repositories": "repositories",
     "@services": "services",
-    "@rabbitmq": "rabbitmq",
+    "@queues": "queues",
+    "@workers": "workers",
     "@socket": "socket",
     "@utils": "utils",
     "@interfaces": "interfaces",
@@ -74,12 +76,15 @@
   "author": "Le Duc Phuong",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/api": "^5.23.0",
+    "@bull-board/express": "^5.23.0",
+    "@bull-board/ui": "^5.23.0",
     "@elastic/elasticsearch": "^8.11.0",
     "@infobip-api/sdk": "^0.3.2",
-    "amqplib": "^0.10.4",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "bullmq": "^5.69.3",
     "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
