--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -3,7 +3,7 @@ const path = require('path');
 module.exports = {
   config: path.resolve(__dirname, 'config', 'config.js'),
   'models-path': path.resolve(__dirname, 'models'),
-  'migrations-path': path.resolve(__dirname, 'database', 'migrations'),
+  'migrations-path': path.resolve(__dirname, 'infra', 'database', 'migrations'),
   'seeders-path': path.resolve(__dirname, 'database', 'seeders'),
 };
 
