--- a/server/infra/.env.format
+++ b/server/infra/.env.format
@@ -10,6 +10,12 @@ DB_PASSWORD=changeme
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 
+# ClickHouse (for search logs and analytics)
+CLICKHOUSE_HOST=http://localhost:8123
+CLICKHOUSE_DATABASE=travelnest
+CLICKHOUSE_USER=default
+CLICKHOUSE_PASSWORD=
+
 # ---------- ELK stack (docker-compose.elk.yml) ----------
 ELASTICSEARCH_PASSWORD=changeme
 ELASTICSEARCH_HOSTS=http://elasticsearch:9200
