--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,30 +2,20 @@ version: '3.8'
 
 services:
   server:
-    build:
-      context: ./server
-      dockerfile: Dockerfile.dev
-      args:
-        - NODE_ENV=development
+    image: ${BACKEND_IMAGE:-travelnest-backend:latest}
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - DB_HOST=mysql
       - DB_PORT=3306
-      - DB_USER=root
-      - DB_PASSWORD=1
-      - DB_NAME=booking_website
+      - DB_USER=${DB_USER:-root}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME:-booking_website}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-    volumes:
-      - ./server:/usr/src/app
-      - /usr/src/app/node_modules
-    command: [
-      "sh",
-      "-c",
-      "npm run migrate && npm run dev"
-    ]
+      - SESSION_SECRET=${SESSION_SECRET}
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
       mysql:
         condition: service_healthy
@@ -33,6 +23,7 @@ services:
         condition: service_healthy
     networks:
       - app-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
       interval: 30s
@@ -41,34 +32,35 @@ services:
       start_period: 40s
 
   client:
-    build:
-      context: ./client
-      dockerfile: Dockerfile.dev
-      args: 
-        - NODE_ENV=development
+    image: ${FRONTEND_IMAGE:-travelnest-frontend:latest}
     ports:
-      - "5173:5173"
-    volumes:
-      - ./client:/usr/src/app
-      - /usr/src/app/node_modules
+      - "80:80"
     depends_on:
       - server
     networks:
       - app-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 5s
 
   mysql:
     image: mysql:8.0
     ports:
-      - "5433:3306"
+      - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=1
-      - MYSQL_DATABASE=booking_website
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_DATABASE=${DB_NAME:-booking_website}
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
       - app-network
+    restart: unless-stopped
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p1"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD}"]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -81,6 +73,7 @@ services:
       - redis_data:/data
     networks:
       - app-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
