refactor and improve notification module and socketIO

--- a/server/infra/docker-compose.dev.yml
+++ b/server/infra/docker-compose.dev.yml
@@ -44,6 +44,19 @@ services:
       timeout: 10s
       retries: 5
 
+  redisinsight:
+    image: redis/redisinsight:latest
+    container_name: redis-insight
+    restart: unless-stopped
+    ports:
+      - '5540:5540'
+    volumes:
+      - redis-insight-data:/data
+    networks:
+      - travelnest-net
+    depends_on:
+      - redis
+
   minio:
     image: minio/minio:latest
     container_name: minio
@@ -91,5 +104,6 @@ networks:
 volumes:
   mysql_data:
   redis_data:
+  redis-insight-data:
   rabbitmq_data:
   clickhouse_data:
