--- a/server/package.json
+++ b/server/package.json
@@ -148,6 +148,7 @@
     "prettier": "^3.7.4",
     "sequelize-cli": "^6.6.5",
     "sinon": "^21.0.1",
+    "socket.io-client": "^4.8.3",
     "supertest": "^7.2.2"
   }
 }
