--- a/server/.env.format
+++ b/server/.env.format
@@ -21,8 +21,11 @@ REDIS_DB=1
 SESSION_SECRET_KEY=secretkey
 
 # node mailer
-NODEMAILER_EMAIL=
-NODEMAILER_PASSWORD=
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=youremail@gmail.com
+SMTP_PASS=yourpassword
+SMTP_SECURE=false
 
 # email validation (using abtract api https://www.abstractapi.com/)
 EMAIL_VALIDATION_API_KEY=
