move docker files into infra folder

--- a/server/infra/.dockerignore
+++ b/server/infra/.dockerignore
@@ -1,5 +1,30 @@
 node_modules
-dist
+npm-debug.log
+.env
 .env.*
-!${ENV_FILE}
+!.env.format
+.git
+.gitignore
+README.md
+.eslintrc.js
+.prettierrc
+.prettierignore
+*.md
+logs
 *.log
+coverage
+.nyc_output
+.DS_Store
+.vscode
+.idea
+__tests__
+*.test.js
+*.spec.js
+Dockerfile*
+docker-compose*.yml
+.dockerignore
+database/migrations
+database/seeders
+elasticsearch/data
+minio-data
+../docs
