--- a/server/infra/Dockerfile
+++ b/server/infra/Dockerfile
@@ -1,5 +1,19 @@
-ARG ENV_FILE
-# Use Node.js as base image
+# Multi-stage build for optimized production image
+FROM node:18-alpine AS builder
+
+# Create app directory
+WORKDIR /usr/src/app
+
+# Copy package files
+COPY package*.json ./
+
+# Install dependencies (including devDependencies for building)
+RUN npm ci
+
+# Copy source code
+COPY . .
+
+# Production stage
 FROM node:18-alpine
 
 # Create app directory
@@ -8,16 +22,27 @@ WORKDIR /usr/src/app
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install only production dependencies
+RUN npm ci --only=production && \
+    npm cache clean --force
 
-# Copy source code
-COPY . .
+# Copy built application from builder
+COPY --from=builder /usr/src/app .
 
-COPY ${ENV_FILE} .env
+# Create non-root user for security
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001 && \
+    chown -R nodejs:nodejs /usr/src/app
+
+# Switch to non-root user
+USER nodejs
 
 # Expose port
 EXPOSE 3000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD node -e "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
 # Start the server
 CMD ["npm", "start"]
