--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Booking hotel platform",
-  "main": "index.js",
+  "type": "commonjs",
+  "main": "server.js",
   "nodemonConfig": {
     "ignore": [
       "api/elasticsearch/*",
@@ -15,8 +16,9 @@
     ]
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "dev": "cross-env NODE_ENV=development nodemon server.js",
+    "db:init": "cross-env NODE_ENV=development node infra/database/init.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
@@ -58,7 +60,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:unit": "jest __tests__/unit",
-    "test:integration": "jest __tests__/integration",
+    "test:integration": "jest --config jest.integration.config.js",
     "test:verbose": "jest --verbose",
     "test:ci": "jest --ci --coverage --maxWorkers=2"
   },
@@ -129,6 +131,8 @@
     "@babel/preset-env": "^7.29.0",
     "@eslint/js": "^9.25.1",
     "@faker-js/faker": "^10.2.0",
+    "@testcontainers/mysql": "^11.12.0",
+    "@testcontainers/redis": "^11.12.0",
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
@@ -149,6 +153,7 @@
     "sequelize-cli": "^6.6.5",
     "sinon": "^21.0.1",
     "socket.io-client": "^4.8.3",
-    "supertest": "^7.2.2"
+    "supertest": "^7.2.2",
+    "testcontainers": "^11.12.0"
   }
 }
