--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -4,19 +4,19 @@ on:
   push:
     branches: [master, develop, staging]
     paths:
-      - 'client/**'
-      - '.github/workflows/ci-frontend.yml'
+      - "client/**"
+      - ".github/workflows/ci-frontend.yml"
   pull_request:
     branches: [master, develop, staging]
     paths:
-      - 'client/**'
-      - '.github/workflows/ci-frontend.yml'
+      - "client/**"
+      - ".github/workflows/ci-frontend.yml"
 
 jobs:
   lint-and-build:
     name: Lint and Build Frontend
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         node-version: [18.x, 20.x]
@@ -33,7 +33,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
           cache-dependency-path: client/package-lock.json
 
       - name: Install dependencies
@@ -63,45 +63,45 @@ jobs:
           du -sh dist/ >> $GITHUB_STEP_SUMMARY
           du -sh dist/**/* >> $GITHUB_STEP_SUMMARY || true
 
-  security-scan:
-    name: Security Audit
-    runs-on: ubuntu-latest
-    
-    defaults:
-      run:
-        working-directory: ./client
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18.x'
-          cache: 'npm'
-          cache-dependency-path: client/package-lock.json
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run npm audit
-        run: npm audit --audit-level=moderate
-        continue-on-error: true
-
-      - name: Run Snyk security scan
-        uses: snyk/actions/node@master
-        continue-on-error: true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --severity-threshold=high --file=client/package.json
-          command: test
+  # security-scan:
+  #   name: Security Audit
+  #   runs-on: ubuntu-latest
+  #
+  #   defaults:
+  #     run:
+  #       working-directory: ./client
+  #
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '18.x'
+  #         cache: 'npm'
+  #         cache-dependency-path: client/package-lock.json
+  #
+  #     - name: Install dependencies
+  #       run: npm ci
+  #
+  #     - name: Run npm audit
+  #       run: npm audit --audit-level=moderate
+  #       continue-on-error: true
+  #
+  #     - name: Run Snyk security scan
+  #       uses: snyk/actions/node@master
+  #       continue-on-error: true
+  #       env:
+  #         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  #       with:
+  #         args: --severity-threshold=high --file=client/package.json
+  #         command: test
 
   preview-validation:
     name: Validate Preview Build
     runs-on: ubuntu-latest
-    
+
     defaults:
       run:
         working-directory: ./client
@@ -113,8 +113,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
-          cache: 'npm'
+          node-version: "18.x"
+          cache: "npm"
           cache-dependency-path: client/package-lock.json
 
       - name: Install dependencies
