--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -4,17 +4,17 @@ on:
   push:
     branches: [master, develop, staging]
     paths:
-      - 'server/**'
-      - 'client/**'
-      - '.github/workflows/docker-build-push.yml'
+      - "server/**"
+      - "client/**"
+      - ".github/workflows/docker-build-push.yml"
   release:
     types: [published]
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Target environment'
+        description: "Target environment"
         required: true
-        default: 'development'
+        default: "development"
         type: choice
         options:
           - development
@@ -64,7 +64,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./server
-          file: ./server/Dockerfile
+          file: ./server/infra/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -76,16 +76,16 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.BACKEND_IMAGE_NAME }}:${{ github.sha }}
-          format: 'sarif'
-          output: 'trivy-backend-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          format: "sarif"
+          output: "trivy-backend-results.sarif"
+          severity: "CRITICAL,HIGH"
 
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: 'trivy-backend-results.sarif'
-          category: 'backend-image'
+          sarif_file: "trivy-backend-results.sarif"
+          category: "backend-image"
 
   build-frontend:
     name: Build Frontend Docker Image
@@ -136,50 +136,50 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.FRONTEND_IMAGE_NAME }}:${{ github.sha }}
-          format: 'sarif'
-          output: 'trivy-frontend-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          format: "sarif"
+          output: "trivy-frontend-results.sarif"
+          severity: "CRITICAL,HIGH"
 
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: 'trivy-frontend-results.sarif'
-          category: 'frontend-image'
+          sarif_file: "trivy-frontend-results.sarif"
+          category: "frontend-image"
 
-  notify:
-    name: Notify Build Status
-    runs-on: ubuntu-latest
-    needs: [build-backend, build-frontend]
-    if: always()
-
-    steps:
-      - name: Check build status
-        run: |
-          if [[ "${{ needs.build-backend.result }}" == "success" && "${{ needs.build-frontend.result }}" == "success" ]]; then
-            echo "BUILD_STATUS=success" >> $GITHUB_ENV
-            echo "BUILD_MESSAGE=✅ All Docker images built successfully" >> $GITHUB_ENV
-          else
-            echo "BUILD_STATUS=failure" >> $GITHUB_ENV
-            echo "BUILD_MESSAGE=❌ Docker image build failed" >> $GITHUB_ENV
-          fi
-
-      - name: Send Slack notification
-        if: env.SLACK_WEBHOOK_URL != ''
-        uses: slackapi/slack-github-action@v1
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        with:
-          payload: |
-            {
-              "text": "${{ env.BUILD_MESSAGE }}",
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "${{ env.BUILD_MESSAGE }}\n*Repository:* ${{ github.repository }}\n*Branch:* ${{ github.ref_name }}\n*Commit:* ${{ github.sha }}\n*Actor:* ${{ github.actor }}"
-                  }
-                }
-              ]
-            }
+  # notify:
+  #   name: Notify Build Status
+  #   runs-on: ubuntu-latest
+  #   needs: [build-backend, build-frontend]
+  #   if: always()
+  #
+  #   steps:
+  #     - name: Check build status
+  #       run: |
+  #         if [[ "${{ needs.build-backend.result }}" == "success" && "${{ needs.build-frontend.result }}" == "success" ]]; then
+  #           echo "BUILD_STATUS=success" >> $GITHUB_ENV
+  #           echo "BUILD_MESSAGE=✅ All Docker images built successfully" >> $GITHUB_ENV
+  #         else
+  #           echo "BUILD_STATUS=failure" >> $GITHUB_ENV
+  #           echo "BUILD_MESSAGE=❌ Docker image build failed" >> $GITHUB_ENV
+  #         fi
+  #
+  #     - name: Send Slack notification
+  #       if: env.SLACK_WEBHOOK_URL != ''
+  #       uses: slackapi/slack-github-action@v1
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  #       with:
+  #         payload: |
+  #           {
+  #             "text": "${{ env.BUILD_MESSAGE }}",
+  #             "blocks": [
+  #               {
+  #                 "type": "section",
+  #                 "text": {
+  #                   "type": "mrkdwn",
+  #                   "text": "${{ env.BUILD_MESSAGE }}\n*Repository:* ${{ github.repository }}\n*Branch:* ${{ github.ref_name }}\n*Commit:* ${{ github.sha }}\n*Actor:* ${{ github.actor }}"
+  #                 }
+  #               }
+  #             ]
+  #           }
