update seed files

--- a/server/.env.format
+++ b/server/.env.format
@@ -35,7 +35,7 @@ INFOBIP_API_KEY=
 INFOBIP_BASE_URL=
 
 # MINIO
-MINIO_ENDPOINT=minio
+MINIO_ENDPOINT=localhost
 MINIO_PORT=9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
@@ -50,10 +50,7 @@ STRIPE_WEBHOOK_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-# RabbitMQ
-RABBITMQ_URL=amqp://admin:admin123@localhost:5672
-
 # Elastic search
-ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+ELASTICSEARCH_HOSTS=http://localhost:9200
 ELASTICSEARCH_USERNAME=elastic
 ELASTICSEARCH_PASSWORD=admin123
