--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,13 @@
     "start": "cross-env NODE_ENV=production node server.js",
     "dev": "cross-env NODE_ENV=development nodemon server.js",
     "db:init": "cross-env NODE_ENV=development node infra/database/init.js",
+    "db:clear": "cross-env NODE_ENV=development node scripts/clear-database.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
-    "seed": "node database/seeders/seeder.js",
+    "seed:all": "cross-env NODE_ENV=development node infra/database/seeders/seed-all.js",
+    "seed:all:clear": "cross-env NODE_ENV=development node infra/database/seeders/seed-all.js --clear",
+    "seed:all:quick": "cross-env NODE_ENV=development node infra/database/seeders/seed-all.js --quick",
     "seed:user": "cross-env NODE_ENV=development node infra/database/seeders/user.seed.js",
     "seed:amenity": "cross-env NODE_ENV=development node infra/database/seeders/amenity.seed.js",
     "seed:hotel": "cross-env NODE_ENV=development node infra/database/seeders/hotel.seed.js",
@@ -130,7 +133,7 @@
     "@babel/core": "^7.29.0",
     "@babel/preset-env": "^7.29.0",
     "@eslint/js": "^9.25.1",
-    "@faker-js/faker": "^10.2.0",
+    "@faker-js/faker": "^10.3.0",
     "@testcontainers/mysql": "^11.12.0",
     "@testcontainers/redis": "^11.12.0",
     "@types/jest": "^29.5.14",
