--- a/server/.env.format
+++ b/server/.env.format
@@ -46,9 +46,11 @@ MINIO_USE_SSL=false
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
-# Google OAuth
+# OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
 
 # Elastic search
 ELASTICSEARCH_HOSTS=http://localhost:9200
