--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -9,12 +9,18 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx",
-    "lint:fix": "eslint . --fix --ext .vue,.js,.ts,.jsx,.tsx"
+    "lint:fix": "eslint . --fix --ext .vue,.js,.ts,.jsx,.tsx",
+    "test": "vitest",
+    "test:unit": "vitest --project unit",
+    "test:nuxt": "vitest --project nuxt",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.15.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.3",
+    "dotenv": "^17.3.1",
     "nuxt": "^4.3.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.28",
@@ -23,6 +29,7 @@
   "devDependencies": {
     "@element-plus/nuxt": "^1.1.5",
     "@nuxt/test-utils": "^4.0.0",
+    "@playwright/test": "^1.58.2",
     "@vue/test-utils": "^2.4.6",
     "element-plus": "^2.13.2",
     "happy-dom": "^20.7.0",
