--- a/.github/workflows/admin-client.yml
+++ b/.github/workflows/admin-client.yml
@@ -95,7 +95,7 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: [lint-and-build]
-    if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request' && always()
     permissions:
       contents: read
       packages: write
