--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -133,7 +133,7 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: [lint-and-test]
-    if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request' && always()
     permissions:
       contents: read
       packages: write
