--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -134,7 +134,7 @@ jobs:
     name: Build and Push Nginx Image
     runs-on: ubuntu-latest
     needs: [lint-and-build, preview-validation]
-    if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request' && always()
     permissions:
       contents: read
       packages: write
