--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx",
     "lint:fix": "eslint . --fix --ext .vue,.js,.ts,.jsx,.tsx",
+    "typecheck": "vue-tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test": "vitest",
@@ -38,6 +39,7 @@
     "element-plus": "^2.13.2",
     "happy-dom": "^20.7.0",
     "playwright-core": "^1.58.2",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "vue-tsc": "^2.2.0"
   }
 }
