--- a/.github/workflows/admin-client.yml
+++ b/.github/workflows/admin-client.yml
@@ -36,8 +36,9 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [22.x, 24.x]
 
     defaults:
       run:
