--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -39,7 +39,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        fail-fast: false
+        node-version: [22.x, 24.x]
 
     defaults:
       run:
@@ -75,14 +76,14 @@ jobs:
 
       - name: Archive build artifacts
         uses: actions/upload-artifact@v4
-        if: matrix.node-version == '20.x'
+        if: matrix.node-version == '24.x'
         with:
           name: frontend-dist
           path: client/dist/
           retention-days: 7
 
       - name: Analyze bundle size
-        if: matrix.node-version == '20.x'
+        if: matrix.node-version == '24.x'
         run: |
           echo "## 📦 Bundle Size Analysis" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -110,7 +111,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20.x"
+          node-version: "24.x"
           cache: "npm"
           cache-dependency-path: client/package-lock.json
 
